syntax = "proto3";

package okapi.keys;

option csharp_namespace = "Okapi.Keys";
option go_package = "github.com/trinsic-id/okapi";
option java_package = "Okapi.Keys";
option java_outer_classname="API";

import "google/protobuf/struct.proto";

enum KeyType {
    Ed25519 = 0;
    X25519 = 1;
    P256 = 2;
    Bls12381G1G2 = 3;
    Secp256k1 = 4;
}

message GenerateKeyRequest {
    bytes seed = 1;
    KeyType key_type = 2;
}

message GenerateKeyResponse {
    repeated JsonWebKey key = 1;
    google.protobuf.Struct did_document = 2;
}

message ResolveRequest {
    string did = 1;
}

message ResolveResponse {
    google.protobuf.Struct did_document = 1;
    repeated JsonWebKey keys = 2;
}

message JsonWebKey {
    string kid = 1;
    string x = 2;              // public_key
    string y = 3;              // public_key
    string d = 4;              // secret_key
    string crv = 5;
    string kty = 6;
}