syntax = "proto3";

package okapi.keys.v1;

option csharp_namespace = "Okapi.Keys.V1";
option go_package = "github.com/trinsic-id/okapi/go/okapiproto";
option java_package = "trinsic.okapi.keys";
option java_multiple_files = true;

import "google/protobuf/struct.proto";

enum KeyType {
    KEY_TYPE_UNSPECIFIED = 0;
    KEY_TYPE_ED25519 = 1;
    KEY_TYPE_X25519 = 2;
    KEY_TYPE_P256 = 3;
    KEY_TYPE_BLS12381G1G2 = 4;
    KEY_TYPE_SECP256K1 = 5;
}

message GenerateKeyRequest {
    bytes seed = 1;
    KeyType key_type = 2;
}

message GenerateKeyResponse {
    repeated JsonWebKey key = 1;
    google.protobuf.Struct did_document = 2;
}

message ResolveRequest {
    string did = 1;
}

message ResolveResponse {
    google.protobuf.Struct did_document = 1;
    repeated JsonWebKey keys = 2;
}

message JsonWebKey {
    string kid = 1;
    string x = 2;              // public_key
    string y = 3;              // public_key
    string d = 4;              // secret_key
    string crv = 5;
    string kty = 6;
}